# suwa

./: .gitignore  CODEBASE.md  FILE_STRUCTURE.md  PLAN.md  PROJECT_ARCHITECTURE.md  README.md  bts.jsonc  package.json  tsconfig.json
.github/workflows/: deploy.yml
apps/ai-trainer/: .gitignore  dataset_creation.py  pyproject.toml  unified_extractor.py  visualize_data.py
apps/ai-trainer/src/: Swell Models.ipynb  export_artifacts.py  preprocess.py  run_multi_seq.py
apps/ai-trainer/src/bins/data_extractor/: __init__.py  core.py
apps/ai-trainer/src/bins/data_visualization/: __init__.py  core.py
apps/ai-trainer/src/preprocess/: __init__.py  export_artifacts.py  fetch_raw_data.py  log.py  preprocess.py
apps/ai-trainer/src/swell/: load_data.py  train_xgboost.py
apps/ai-trainer/src/tuning/: swell_optimize.py  wesad_optimize.py
apps/ai-trainer/src/wesad/: load_data.py  train_xgboost.py
apps/landing-page/: .cta.json  .env.production  contact.html  index.html  package.json  tsr.config.json  vite.config.ts
apps/landing-page/src/: globals.css  (+1 more)
apps/map-scraper/: main.py  places_data.json  pyproject.toml
apps/model-trainer/: build_notebook.py  cerebrium.toml  colab_train.ipynb  main.py  pyproject.toml
apps/model-trainer/models/seq_120/: model.keras  model.onnx  results.json
apps/model-trainer/models/seq_240/: model.keras  model.onnx  results.json
apps/model-trainer/models/seq_360/: model.keras  model.onnx  results.json
apps/model-trainer/models/wesad_lstm/seq_30/: model.keras  model.onnx  results.json
apps/model-trainer/models/wesad_lstm/seq_60/: model.keras  model.onnx  results.json
apps/model-trainer/models/wesad_lstm/seq_90/: model.keras  model.onnx  results.json
apps/model-trainer/src/: config.py  main.py
apps/model-trainer/src/data/: __init__.py  download.py  features.py  load.py
apps/model-trainer/src/evaluate/: __init__.py  metrics.py
apps/model-trainer/src/models/: __init__.py  lstm.py
apps/model-trainer/src/remote/: modal_app.py
apps/model-trainer/src/training/: export.py  trainer.py
apps/native/: .gitignore  DATA_EXTRACTION_CAPABILITIES.md  app.json  app.plugin.js  global.css  metro.config.js  package.json  tsconfig.json
apps/server/: package.json  tsconfig.json  tsdown.config.ts
apps/stress-predictor-service/: main.py
apps/web/: components.json  globals.d.ts  package.json  tsconfig.json  vite.config.ts
knowledge-base/: AI System.md  Request - Dr, Ruby Ruban.md  Research-Biometric-Reaction.canvas
(+351 files in other folders)
