[project]
name = "ai-trainer"
version = "0.1.0"
description = "AI Trainer for ZenDoc biometric data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "kagglehub>=0.3.0",
    "pandas>=3.0.3",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
]
