[project]
name = "model-trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=1.0.1",
    "matplotlib>=3.10.9",
    "onnx>=1.16.0",
    "onnxruntime>=1.26.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
    "tf2onnx>=1.17.0",
    "cerebrium>=2.4.0",
]

[project.scripts]
train = "main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
